--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,4 +18,6 @@ phases:
       - mvn package
 artifacts:
   files:
+    - cd target/
+    - ls
     - target/aws-build-sample-maven-project-0.0.1-SNAPSHOT.jar
